<resources>
    <string name="app_name">Calculator</string>
    <string name="result">0</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="presentation">%</string>
    <string name="dec">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="category">Category</string>
    <string name="explore_the_nightlife_of_your_city">Explore the nightlife of your city</string>
    <string name="participants">Participants</string>
    <string name="accessibility">Accessibility</string>
    <string name="next">Next</string>
    <string name="label">label</string>
    <string name="price">Price</string>
    <string name="price2">Price💰</string>
    <string name="free">free</string>

    <string-array name="Type">
        <item>Type</item>
        <item>first</item>
        <item>second</item>
        <item>third</item>
    </string-array>

    <array name="initial_slider_values">
        <item>20.0</item>
        <item>70.0</item>
    </array>
</resources>